force-app/main/default/objects/Contract/fields/Altitud__c.field-meta.xml
<CustomField>
    <fullName>Altitud__c</fullName>
    <label>Altitud</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>