force-app/main/default/objects/Contract/fields/Aportaci_n_al_cliente__c.field-meta.xml
<CustomField>
    <fullName>Aportaci_n_al_cliente__c</fullName>
    <inlineHelpText>Importe que le damos directamente al cliente</inlineHelpText>
    <label>Aportación al cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>