force-app/main/default/objects/Contract/fields/Aportacion_maxima_interior__c.field-meta.xml
<CustomField>
    <fullName>Aportacion_maxima_interior__c</fullName>
    <label>Aportacion maxima interior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>