force-app/main/default/objects/Contract/fields/Caldera__c.field-meta.xml
<CustomField>
    <fullName>Caldera__c</fullName>
    <label>Caldera</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>