force-app/main/default/objects/Contract/fields/Campa_a_aplicada__c.field-meta.xml
<CustomField>
    <fullName>Campa_a_aplicada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica que la campaña firmada en contrato ha sido aplicada</description>
    <inlineHelpText>Identifica que la campaña firmada en contrato ha sido aplicada. Marcado= SI</inlineHelpText>
    <label>Campaña aplicada</label>
    <type>Checkbox</type>
</CustomField>