force-app/main/default/objects/Contract/fields/Campa_a_relacionada__c.field-meta.xml
<CustomField>
    <fullName>Campa_a_relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña relacionada</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>