force-app/main/default/objects/Contract/fields/Canalizado_promotor__c.field-meta.xml
<CustomField>
    <fullName>Canalizado_promotor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canalizado promotor</label>
    <referenceTo>Canalizado_promotor__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>