force-app/main/default/objects/Contract/fields/Capacidad_tanque__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_tanque__c</fullName>
    <label>Capacidad tanque</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>