force-app/main/default/objects/Contract/fields/Carburante__c.field-meta.xml
<CustomField>
    <fullName>Carburante__c</fullName>
    <formula>OR(INCLUDES( Account.Uso__c , &quot;Autogas&quot;), TEXT(SBQQ__Quote__r.SBQQ__Opportunity2__r.Dimension1__c) = &apos;30-AUTOGAS&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carburante Autogas</label>
    <type>Checkbox</type>
</CustomField>