force-app/main/default/objects/Contract/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <label>CIF</label>
    <length>9</length>
    <type>Text</type>
</CustomField>