force-app/main/default/objects/Contract/fields/Cobertura_movil__c.field-meta.xml
<CustomField>
    <fullName>Cobertura_movil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobertura móvil</label>
    <type>Checkbox</type>
</CustomField>