force-app/main/default/objects/Contract/fields/Cod_CNAE__c.field-meta.xml
<CustomField>
    <fullName>Cod_CNAE__c</fullName>
    <label>Cod. CNAE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>