force-app/main/default/objects/Contract/fields/Cod_dia_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Cod_dia_de_pago__c</fullName>
    <label>Cod dia de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>