force-app/main/default/objects/Contract/fields/Cod_forma_pago_servicios__c.field-meta.xml
<CustomField>
    <fullName>Cod_forma_pago_servicios__c</fullName>
    <label>Cod. forma pago servicios</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RECIBO</fullName>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
            </value>
            <value>
                <fullName>ANTICIPAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>