force-app/main/default/objects/Contract/fields/Cod_tarifa__c.field-meta.xml
<CustomField>
    <fullName>Cod_tarifa__c</fullName>
    <label>Cod. tarifa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>