force-app/main/default/objects/Contract/fields/Cod_terminos_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Cod_terminos_de_pago__c</fullName>
    <label>Cod. terminos de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>30X30X30</fullName>
            </value>
            <value>
                <fullName>5X30X30</fullName>
            </value>
            <value>
                <fullName>CANALIZADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>