force-app/main/default/objects/Contract/fields/Cod_terminos_pago_servicios__c.field-meta.xml
<CustomField>
    <fullName>Cod_terminos_pago_servicios__c</fullName>
    <label>Cod. terminos pago servicios</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>30X30X30</fullName>
            </value>
            <value>
                <fullName>CANALIZADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>