force-app/main/default/objects/Contract/fields/Compraventa_minima_en_kg__c.field-meta.xml
<CustomField>
    <fullName>Compraventa_minima_en_kg__c</fullName>
    <label>Compraventa mínima en kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>