force-app/main/default/objects/Contract/fields/Conexion_certificado_interior_importe__c.field-meta.xml
<CustomField>
    <fullName>Conexion_certificado_interior_importe__c</fullName>
    <label>Conexion + certificado interior importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>