force-app/main/default/objects/Contract/fields/Conexion_gas_red_ext_importe__c.field-meta.xml
<CustomField>
    <fullName>Conexion_gas_red_ext_importe__c</fullName>
    <label>Conexion gas red ext importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>