force-app/main/default/objects/Contract/fields/Consumo_previsto_GWh__c.field-meta.xml
<CustomField>
    <fullName>Consumo_previsto_GWh__c</fullName>
    <label>Consumo previsto MWh</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>