force-app/main/default/objects/Contract/fields/Consumo_previsto_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Consumo_previsto_Kgs__c</fullName>
    <label>Consumo previsto Kgs</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>