force-app/main/default/objects/Contract/fields/Consumo_previsto_tons__c.field-meta.xml
<CustomField>
    <fullName>Consumo_previsto_tons__c</fullName>
    <label>Consumo contratado</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>