force-app/main/default/objects/Contract/fields/Contadores_importe__c.field-meta.xml
<CustomField>
    <fullName>Contadores_importe__c</fullName>
    <label>Contadores importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>