force-app/main/default/objects/Contract/fields/Contrato_anterior__c.field-meta.xml
<CustomField>
    <fullName>Contrato_anterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato anterior</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>