force-app/main/default/objects/Contract/fields/Contrato_original_recibido__c.field-meta.xml
<CustomField>
    <fullName>Contrato_original_recibido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato original recibido</label>
    <type>Checkbox</type>
</CustomField>