force-app/main/default/objects/Contract/fields/conv_fecha_firma_cliente__c.field-meta.xml
<CustomField>
    <fullName>conv_fecha_firma_cliente__c</fullName>
    <description>No borrar, necesario integración con Docusign</description>
    <formula>TEXT(DAY(CustomerSignedDate))+&quot;/&quot; +TEXT(MONTH( CustomerSignedDate ))+&quot;/&quot; +TEXT(YEAR(CustomerSignedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No borrar, necesario integración con Docusign</inlineHelpText>
    <label>conv_fecha_firma_cliente</label>
    <type>Text</type>
</CustomField>