force-app/main/default/objects/Contract/fields/conv_importe_SAU__c.field-meta.xml
<CustomField>
    <fullName>conv_importe_SAU__c</fullName>
    <description>No borrar, se usa para la integración con Docusign</description>
    <formula>IF( Importe_SAU__c  &lt; 1, &apos;0&apos;&amp;TEXT(Importe_SAU__c ), TEXT(Importe_SAU__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No borrar, se usa para la integración con Docusign</inlineHelpText>
    <label>conv_importe_SAU</label>
    <type>Text</type>
</CustomField>