force-app/main/default/objects/Contract/fields/conv_importe_term_fijo__c.field-meta.xml
<CustomField>
    <fullName>conv_importe_term_fijo__c</fullName>
    <description>No borrar, se usa para la integración con Docusign</description>
    <formula>IF(Importe_t_rmino_fijo__c &lt; 1, &apos;0&apos;&amp;TEXT(Importe_t_rmino_fijo__c), TEXT(Importe_t_rmino_fijo__c))</formula>
    <label>conv_importe_term_fijo</label>
    <type>Text</type>
</CustomField>