force-app/main/default/objects/Contract/fields/conv_total2_ds__c.field-meta.xml
<CustomField>
    <fullName>conv_total2_ds__c</fullName>
    <description>No borrar, se usa para la integración con Docusign</description>
    <formula>Importe_SAU__c +  Importe_alquiler_contador__c +  Importe_t_rmino_fijo__c</formula>
    <inlineHelpText>No borrar, se usa para la integración con Docusign</inlineHelpText>
    <label>conv_total2_ds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>