force-app/main/default/objects/Contract/fields/Coordenadas_GPS__c.field-meta.xml
<CustomField>
    <fullName>Coordenadas_GPS__c</fullName>
    <label>Coordenadas GPS</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>