force-app/main/default/objects/Contract/fields/Coste_resolucion_anticipada__c.field-meta.xml
<CustomField>
    <fullName>Coste_resolucion_anticipada__c</fullName>
    <label>Coste resolucion anticipada (€/año)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>