force-app/main/default/objects/Contract/fields/Coste_resolucion_anticipada_MWh__c.field-meta.xml
<CustomField>
    <fullName>Coste_resolucion_anticipada_MWh__c</fullName>
    <label>Coste resolucion anticipada (MWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>