force-app/main/default/objects/Contract/fields/DateFirstFilled__c.field-meta.xml
<CustomField>
    <fullName>DateFirstFilled__c</fullName>
    <formula>Direccion_de_entrega__r.Fecha_1er_llenado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha 1er llenado</label>
    <type>Date</type>
</CustomField>