force-app/main/default/objects/Contract/fields/dcm_propano2__c.field-meta.xml
<CustomField>
    <fullName>dcm_propano2__c</fullName>
    <label>dcm propano2</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>