force-app/main/default/objects/Contract/fields/dcm_propano3__c.field-meta.xml
<CustomField>
    <fullName>dcm_propano3__c</fullName>
    <label>dcm propano3</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>