force-app/main/default/objects/Contract/fields/Derechos_de_titular__c.field-meta.xml
<CustomField>
    <fullName>Derechos_de_titular__c</fullName>
    <label>Derechos de titular</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Uso</fullName>
            </value>
            <value>
                <fullName>Propiedad</fullName>
            </value>
            <value>
                <fullName>Servidumbre</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>