force-app/main/default/objects/Contract/fields/Direccion_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_entrega__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dirección de entrega</label>
    <referenceTo>Direcci_n_de_entrega__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>