force-app/main/default/objects/Contract/fields/Directorio_pdf__c.field-meta.xml
<CustomField>
    <fullName>Directorio_pdf__c</fullName>
    <label>Directorio pdf</label>
    <type>Url</type>
</CustomField>