force-app/main/default/objects/Contract/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <description>DNI del contacto que ha firmado el contrato</description>
    <formula>CustomerSigned.DNI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI</label>
    <type>Text</type>
</CustomField>