force-app/main/default/objects/Contract/fields/Documentosfirmados__c.field-meta.xml
<CustomField>
    <fullName>Documentosfirmados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se actualiza el campo cuando los documentos han sido firmados por el cliente</description>
    <label>Documentos firmados</label>
    <type>Checkbox</type>
</CustomField>