force-app/main/default/objects/Contract/fields/DocuSigCIF__c.field-meta.xml
<CustomField>
    <fullName>DocuSigCIF__c</fullName>
    <description>Id fiscal si se trata de una empresa</description>
    <formula>IF(DocuSignNombreContacto__c =&quot;&quot;,  Account.Id_Fiscal__c ,&quot;&quot;)</formula>
    <label>CIF Docusign</label>
    <type>Text</type>
</CustomField>