force-app/main/default/objects/Contract/fields/DocuSignAereo__c.field-meta.xml
<CustomField>
    <fullName>DocuSignAereo__c</fullName>
    <description>Marca para mapear en docusign cuando el tipo de tanque es Aéreo</description>
    <formula>IF(TEXT( Tipo_de_tanque__c )= &apos;Aereo&apos;, TRUE, FALSE)</formula>
    <label>Aéreo DocuSign</label>
    <type>Checkbox</type>
</CustomField>