force-app/main/default/objects/Contract/fields/DocuSignAereoDeposito3__c.field-meta.xml
<CustomField>
    <fullName>DocuSignAereoDeposito3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Aéreo Depósito 3 (DocuSign)</label>
    <type>Checkbox</type>
</CustomField>