force-app/main/default/objects/Contract/fields/DocuSignAnioInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>DocuSignAnioInicioContrato__c</fullName>
    <description>Campo creado para DocuSign</description>
    <formula>YEAR( StartDate )</formula>
    <label>Año Inicio Contrato (DocuSign)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>