force-app/main/default/objects/Contract/fields/DocusignAsistencia24H__c.field-meta.xml
<CustomField>
    <fullName>DocusignAsistencia24H__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asistencia 24 horas</description>
    <label>Asistencia 24 h</label>
    <type>Checkbox</type>
</CustomField>