force-app/main/default/objects/Contract/fields/DocuSignBanco__c.field-meta.xml
<CustomField>
    <fullName>DocuSignBanco__c</fullName>
    <description>Campo creado para el mapeo de contrato Depósito Propio</description>
    <label>Banco (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>