force-app/main/default/objects/Contract/fields/DocuSignCapacidadLitrosDeposito1__c.field-meta.xml
<CustomField>
    <fullName>DocuSignCapacidadLitrosDeposito1__c</fullName>
    <description>Campo creado para el mapeo de contratos de Depósito 1 en DocuSign</description>
    <label>Capacidad litros depósito 1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>