force-app/main/default/objects/Contract/fields/DocuSignCapacidadLitrosDeposito2__c.field-meta.xml
<CustomField>
    <fullName>DocuSignCapacidadLitrosDeposito2__c</fullName>
    <description>Campo creado para el mapeo de contratos de Depósito 2 en DocuSign</description>
    <label>Capacidad litros depósito 2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>