force-app/main/default/objects/Contract/fields/DocuSignCapacidadLitrosDeposito3__c.field-meta.xml
<CustomField>
    <fullName>DocuSignCapacidadLitrosDeposito3__c</fullName>
    <description>Campo creado para el mapeo de contratos de Depósito 3 en DocuSign</description>
    <label>Capacidad litros depósito 3</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>