force-app/main/default/objects/Contract/fields/DocuSignContador__c.field-meta.xml
<CustomField>
    <fullName>DocuSignContador__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que vendrá informado de las líneas de oferta. Actualmente se crea para mostrar en Docusign</description>
    <label>Contador</label>
    <type>Checkbox</type>
</CustomField>