force-app/main/default/objects/Contract/fields/DocuSignDescripcionUbicacionDeposito__c.field-meta.xml
<CustomField>
    <fullName>DocuSignDescripcionUbicacionDeposito__c</fullName>
    <description>Campo creado para el ,apeo de contratos DocuSign</description>
    <label>Descripción ubicación depósito(DocuSign)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>