force-app/main/default/objects/Contract/fields/DocuSignDescuentoGasTramoContrato__c.field-meta.xml
<CustomField>
    <fullName>DocuSignDescuentoGasTramoContrato__c</fullName>
    <description>Pinta el descuento de gas correspondiente al tramo del contrato</description>
    <formula>IF(TEXT(DocuSignTramoContrato__c) =&apos;1&apos;, TEXT(dto_1__c) , 
IF(TEXT(DocuSignTramoContrato__c)=&apos;2&apos;, TEXT(dto_2__c),
IF(TEXT(DocuSignTramoContrato__c)=&apos;3&apos;, TEXT(dto_3__c),
IF(TEXT(DocuSignTramoContrato__c)=&apos;4&apos;, TEXT(dto_4__c),
IF(TEXT(DocuSignTramoContrato__c)=&apos;5&apos;, TEXT(dto_5__c),&quot;&quot;)))))</formula>
    <label>Descuento Gas Tramo contrato</label>
    <type>Text</type>
</CustomField>