force-app/main/default/objects/Contract/fields/DocuSignDiInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>DocuSignDiInicioContrato__c</fullName>
    <description>Campo Para DocuSign</description>
    <formula>DAY( StartDate )</formula>
    <label>Día Inicio de contrato (DoCuSign)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>