force-app/main/default/objects/Contract/fields/DocuSignDireccionBanco__c.field-meta.xml
<CustomField>
    <fullName>DocuSignDireccionBanco__c</fullName>
    <description>Campo creado para mapeo en DocuSign Contrato Depósito Propio</description>
    <label>Dirección Banco (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>