force-app/main/default/objects/Contract/fields/DocuSignDiscountDuration__c.field-meta.xml
<CustomField>
    <fullName>DocuSignDiscountDuration__c</fullName>
    <description>Campo creado para el mapeo de DocuSign pero será un campo que vendrá relleno de la línea de oferta</description>
    <label>Duración descuento (años)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>