force-app/main/default/objects/Contract/fields/DocuSignDuracionContratoKilos__c.field-meta.xml
<CustomField>
    <fullName>DocuSignDuracionContratoKilos__c</fullName>
    <description>Campo creado para el mapeo de DocuSign</description>
    <formula>Duracion_contrato_en_toneladas__c  * 1000</formula>
    <label>Duracion contrato en kilos (DocuSign)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>