force-app/main/default/objects/Contract/fields/DocuSignEnterrado__c.field-meta.xml
<CustomField>
    <fullName>DocuSignEnterrado__c</fullName>
    <description>Marca para mapear en docusign cuando el tipo de tanque es Enterrado</description>
    <formula>if(text( Tipo_de_tanque__c )=&apos;Enterrado&apos;, true, false)</formula>
    <label>Enterrado DocuSign</label>
    <type>Checkbox</type>
</CustomField>