force-app/main/default/objects/Contract/fields/DocuSignEnterradoDeposito3__c.field-meta.xml
<CustomField>
    <fullName>DocuSignEnterradoDeposito3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Enterrado Depósito 3 (DocuSign)</label>
    <type>Checkbox</type>
</CustomField>