force-app/main/default/objects/Contract/fields/DocuSignFabricanteDeposito1__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFabricanteDeposito1__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Fabricante Depósito 1 (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>