force-app/main/default/objects/Contract/fields/DocuSignFabricanteDeposito2__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFabricanteDeposito2__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Fabricante Depósito 2 (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>