force-app/main/default/objects/Contract/fields/DocuSignFechaColocacionContador__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFechaColocacionContador__c</fullName>
    <description>Campo creado para el mapeo de contrato de tipo póliza en DocuSign</description>
    <label>Fecha de colocación contador (DocuSign)</label>
    <type>Date</type>
</CustomField>