force-app/main/default/objects/Contract/fields/DocuSignFechaFabricacionDeposito1__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFechaFabricacionDeposito1__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Fecha Fabricación Deposito 1 (DocuSign)</label>
    <type>Date</type>
</CustomField>