force-app/main/default/objects/Contract/fields/DocuSignFechaFabricacionDeposito2__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFechaFabricacionDeposito2__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Fecha Fabricación Deposito 2 (DocuSign)</label>
    <type>Date</type>
</CustomField>