force-app/main/default/objects/Contract/fields/DocuSignFechaFabricacionDeposito3__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFechaFabricacionDeposito3__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Fecha Fabricación Deposito 3 (DocuSign)</label>
    <type>Date</type>
</CustomField>