force-app/main/default/objects/Contract/fields/DocuSignFechaLegalizacionDeposito1__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFechaLegalizacionDeposito1__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Fecha Legalización Depósito 1 (DocuSign)</label>
    <type>Date</type>
</CustomField>