force-app/main/default/objects/Contract/fields/DocuSignFechaLegalizacionDeposito2__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFechaLegalizacionDeposito2__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Fecha Legalización Depósito 2 (DocuSign)</label>
    <type>Date</type>
</CustomField>