force-app/main/default/objects/Contract/fields/DocuSignFechaLegalizacionDeposito3__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFechaLegalizacionDeposito3__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Fecha Legalización Depósito 3 (DocuSign)</label>
    <type>Date</type>
</CustomField>