force-app/main/default/objects/Contract/fields/DocuSignInspeccionInstalacionReceptora__c.field-meta.xml
<CustomField>
    <fullName>DocuSignInspeccionInstalacionReceptora__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que vendrá informado de las líneas de oferta. Actualmente se crea para mostrar en Docusign</description>
    <label>Inspección instalación receptora</label>
    <type>Checkbox</type>
</CustomField>