force-app/main/default/objects/Contract/fields/DocuSignLectorNivelDistancia__c.field-meta.xml
<CustomField>
    <fullName>DocuSignLectorNivelDistancia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que vendrá informado de las líneas de oferta. Actualmente se crea para mostrar en Docusign</description>
    <label>Lector a distancia nivel gas disponible</label>
    <type>Checkbox</type>
</CustomField>