force-app/main/default/objects/Contract/fields/DocuSignLecturaInicialContador__c.field-meta.xml
<CustomField>
    <fullName>DocuSignLecturaInicialContador__c</fullName>
    <description>Campo creado para el mapeo de contrato de tipo póliza en DocuSign</description>
    <label>Lectura inicial contador (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>